--- a/Resources/Prototypes/SS220/CultYogg/actions.yml
+++ b/Resources/Prototypes/SS220/CultYogg/actions.yml
@@ -72,7 +72,7 @@
   components:
   - type: EntityTargetAction
     useDelay: 15
-    event: !type:MiGoEnslavementEvent
+    event: !type:MiGoEnslavementActionEvent
     itemIconStyle: NoItem
     icon: { sprite: SS220/Interface/Actions/cult_yogg.rsi, state: enslavement }
 
