telepathy naming fix

--- a/Resources/Prototypes/SS220/telepathy_channels.yml
+++ b/Resources/Prototypes/SS220/telepathy_channels.yml
@@ -1,9 +1,8 @@
 - type: telepathyChannel
   id: TelepathyChannelYoggSothothCult
-  name: chat-telepathy-yogg-sothoth-cult
   channelParameters:
     name: chat-telepathy-yogg-sothoth-cult
-    color: Brown
+    color: "#20B2AA"
 
 - type: telepathyChannel
   id: TelepathyChannelSpaceDragon
