sounds update + rename

--- a/Resources/Audio/SS220/Weapons/Guns/CultYogg/attributions.yml
+++ b/Resources/Audio/SS220/Weapons/Guns/CultYogg/attributions.yml
@@ -1,4 +1,4 @@
-- files: ["venomancer_reload.ogg", "venomancer_shot.ogg"]
+- files: ["spitballer_reload.ogg", "spitballer_shot.ogg"]
   license: "CC-BY-3.0"
   copyright: "Made by MIXnikita for SS220. Licensed under EULA/CLA with a hosting restriction, full text: https://raw.githubusercontent.com/SerbiaStrong-220/space-station-14/master/CLA.txt"
   source: "https://github.com/SerbiaStrong-220/space-station-14"
@@ -8,7 +8,7 @@
   copyright: "Made by MIXnikita for SS220. Licensed under EULA/CLA with a hosting restriction, full text: https://raw.githubusercontent.com/SerbiaStrong-220/space-station-14/master/CLA.txt"
   source: "https://github.com/SerbiaStrong-220/space-station-14"
 
-- files: ["buble_fly1.ogg", "buble_fly2.ogg", "buble_fly3.ogg", "buble_exp.ogg"]
+- files: ["bubble_fly1.ogg", "bubble_fly2.ogg", "bubble_fly3.ogg", "bubble_exp.ogg"]
   license: "CC-BY-3.0"
   copyright: "Made by MIXnikita for SS220. Licensed under EULA/CLA with a hosting restriction, full text: https://raw.githubusercontent.com/SerbiaStrong-220/space-station-14/master/CLA.txt"
   source: "https://github.com/SerbiaStrong-220/space-station-14"
