--- a/Resources/Prototypes/SS220/SoundCollections/cultYogg.yml
+++ b/Resources/Prototypes/SS220/SoundCollections/cultYogg.yml
@@ -4,3 +4,33 @@
   id: CultYoggMusic
   files:
     - /Audio/SS220/CultYogg/its_coming.ogg
+
+- type: soundCollection
+  id: NyarlathotepSounds
+  files:
+    - /Audio/SS220/CultYogg/nyarlathotep_step1.ogg
+    - /Audio/SS220/CultYogg/nyarlathotep_step2.ogg
+    - /Audio/SS220/CultYogg/nyarlathotep_voice1.ogg
+    - /Audio/SS220/CultYogg/nyarlathotep_voice2.ogg
+    - /Audio/SS220/CultYogg/nyarlathotep_voice3.ogg
+
+- type: soundCollection
+  id: RaveSounds
+  files:
+    - /Audio/SS220/CultYogg/nyarlathotep_voice1.ogg
+    - /Audio/SS220/CultYogg/nyarlathotep_voice2.ogg
+    - /Audio/SS220/CultYogg/nyarlathotep_voice3.ogg
+
+- type: soundCollection
+  id: CultYoggCleansingSounds
+  files:
+    - /Audio/SS220/CultYogg/inhale_scream_1.ogg
+    - /Audio/SS220/CultYogg/inhale_scream_2.ogg
+    - /Audio/SS220/CultYogg/inhale_scream_3.ogg
+
+- type: soundCollection
+  id: CultYoggExplosiveBubbleSounds
+  files:
+    - /Audio/SS220/Weapons/Guns/CultYogg/bubble_fly1.ogg
+    - /Audio/SS220/Weapons/Guns/CultYogg/bubble_fly2.ogg
+    - /Audio/SS220/Weapons/Guns/CultYogg/bubble_fly3.ogg
