--- a/Resources/Prototypes/SS220/CultYogg/duffel.yml
+++ b/Resources/Prototypes/SS220/CultYogg/duffel.yml
@@ -1,7 +1,7 @@
 # © SS220, An EULA/CLA with a hosting restriction, full text: https://raw.githubusercontent.com/SerbiaStrong-220/space-station-14/master/CLA.txt
 
 - type: entity
-  parent: ClothingBackpack
+  parent: [ClothingBackpack, CultYoggRestrictedItem]
   id: ClothingBackpackDuffelCultYogg
   suffix: CultYogg
   name: cult duffel bag
@@ -23,8 +23,3 @@
       components:
       - CultYogg
   - type: StuckOnEquip
-  - type: RestrictedItem
-    whitelist:
-      requireAll: true
-      components:
-      - CultYogg
