--- a/Resources/Prototypes/SS220/CultYogg/claw.yml
+++ b/Resources/Prototypes/SS220/CultYogg/claw.yml
@@ -2,7 +2,7 @@
 
 - type: entity
   name: Claw
-  parent: BaseItem
+  parent: [BaseItem, CultYoggRestrictedItem]
   id: ClawCultYogg
   suffix: CultYogg
   description: description
@@ -42,11 +42,6 @@
     useSound: /Audio/Items/jaws_pry.ogg # звук открытия шлюза, оставить так или заменить
   - type: StuckOnEquip
     inHandItem: true
-  - type: RestrictedItem
-    whitelist:
-      requireAll: true
-      components:
-      - CultYogg
   - type: Insulated # заглушка на будущее, защищает только от перерезания решеток под напряжением
   - type: Tag
     tags:
