--- a/Resources/Prototypes/SS220/CultYogg/sedativesting.yml
+++ b/Resources/Prototypes/SS220/CultYogg/sedativesting.yml
@@ -1,6 +1,8 @@
+# © SS220, An EULA/CLA with a hosting restriction, full text: https://raw.githubusercontent.com/SerbiaStrong-220/space-station-14/master/CLA.txt
+
 - type: entity
   name: sedative sting
-  parent: BaseItem
+  parent: [BaseItem, CultYoggRestrictedItem]
   id: SedativeStingCultYogg
   suffix: CultYogg
   components:
@@ -21,7 +23,3 @@
     transferAmount: 10
   - type: StuckOnEquip
     inHandItem: true
-  - type: RestrictedItem
-    whitelist:
-      components:
-      - CultYogg
