no rotation, file migration, corruption effect

--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/fungus.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/fungus.yml
@@ -52,6 +52,7 @@
     damageContainer: Inorganic
     damageModifierSet: Metallic
   - type: Transform
+    noRot: true
     anchored: true
   - type: PlantHolderVisuals
   - type: Fungus
