--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/nyarlathotep.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/nyarlathotep.yml
@@ -16,6 +16,8 @@
     bodyType: Dynamic
     bodyStatus: InAir
     sleepingAllowed: false
+  - type: Transform
+    noRot: true
   - type: PointLight
     enabled: true
     radius: 25
