--- a/Resources/Prototypes/SS220/Entities/Structures/CultYogg/buildings.yml
+++ b/Resources/Prototypes/SS220/Entities/Structures/CultYogg/buildings.yml
@@ -9,6 +9,8 @@
   components:
   - type: Physics
     bodyType: Static
+  - type: Transform
+    noRot: true
   - type: Fixtures
     fixtures:
       fix1:
