--- a/Resources/Prototypes/SS220/Entities/Structures/CultYogg/cultyoggaltar.yml
+++ b/Resources/Prototypes/SS220/Entities/Structures/CultYogg/cultyoggaltar.yml
@@ -28,6 +28,7 @@
     position: Down
     rotation: -90
   - type: Transform
+    noRot: true
   - type: Physics
     bodyType: Static
   - type: Fixtures
