--- a/Resources/Prototypes/SS220/Entities/Structures/CultYogg/cultyoggpod.yml
+++ b/Resources/Prototypes/SS220/Entities/Structures/CultYogg/cultyoggpod.yml
@@ -19,6 +19,8 @@
     radius: 1.5
     energy: 0.3
   - type: Damageable
+  - type: Transform
+    noRot: true
   - type: Destructible
     thresholds:
     - trigger:
