--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/nyarlathotep.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/nyarlathotep.yml
@@ -1,5 +1,20 @@
 # © SS220, An EULA/CLA with a hosting restriction, full text: https://raw.githubusercontent.com/SerbiaStrong-220/space-station-14/master/CLA.txt
 
+# spawn animation, spawns actual nyarlathotep when it ends
+- type: entity
+  id: NyarlathotepSpawn
+  suffix: Spawn
+  components:
+  - type: Sprite
+    layers:
+    - state: spawn
+      shader: unshaded
+  # spawn animation lasts 3.5 seconds
+  - type: TimedDespawn
+    lifetime: 3.5
+  - type: SpawnOnDespawn
+    prototype: Nyarlathotep
+
 - type: entity
   id: Nyarlathotep
   name: Nyarlathotep
@@ -23,7 +38,7 @@
     radius: 25
     color: "#FF0000"
   - type: Sprite
-    drawdepth: Overdoors
+    drawdepth: AboveFovOverlay #above fkng sings
     sprite: SS220/Mobs/CultYogg/nyarlathotep.rsi
     shader: unshaded
     layers:
@@ -57,7 +72,7 @@
   - type: NyarlathotepHorizon
     colliderFixtureId: NyarlathotepHorizonCollider
   - type: NyarlathotepSearchTargets
-    searchRange: 100
+    searchRange: 300
   - type: SpamEmitSound
     minInterval: 5
     maxInterval: 20
@@ -66,4 +81,7 @@
       params:
         maxDistance: 100
         variation: 0.05
+  - type: WarpPoint
+    follow: true
+    location: Nyarlathotep
 
