--- a/Resources/Prototypes/SS220/Entities/Objects/Consumable/CultYogg/MiGomycete.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Consumable/CultYogg/MiGomycete.yml
@@ -42,7 +42,8 @@
 
 - type: seed
   id: MiGoSpores
-  name: seeds-migo-name
+  name: семяна ми-гомицелия
+  #name: seeds-migo-name
   noun: seeds-noun-spores
   displayName: seeds-migo-display-name
   plantRsi: SS220/Objects/CultYogg/migomycete.rsi
@@ -54,12 +55,12 @@
   maturation: 12
   production: 3
   yield: 3
-  potency: 10
+  potency: 2
   growthStages: 2
   waterConsumption: 0.60
   nutrientConsumption: 0.50
   chemicals:
     TheBloodOfYogg:
-      Min: 5
-      Max: 5
-      PotencyDivisor: 2
+      Min: 2
+      Max: 2
+      PotencyDivisor: 1
