noun fix, altar final acsending fixes

--- a/Resources/Prototypes/SS220/Entities/Objects/Consumable/CultYogg/MiGomycete.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Consumable/CultYogg/MiGomycete.yml
@@ -42,8 +42,7 @@
 
 - type: seed
   id: MiGoSpores
-  name: семяна ми-гомицелия
-  #name: seeds-migo-name
+  name: seeds-migo-name
   noun: seeds-noun-spores
   displayName: seeds-migo-display-name
   plantRsi: SS220/Objects/CultYogg/migomycete.rsi
