--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/pond.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/pond.yml
@@ -34,6 +34,7 @@
   - type: Sprite
     sprite: SS220/Structures/CultYogg/yoggpond.rsi
     state: pond
+    noRot: true
   - type: InteractionOutline
   - type: Transform
     noRot: true
