--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/spikegun.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/spikegun.yml
@@ -74,7 +74,8 @@
     impactEffect: BulletImpactEffect
     damage:
       types:
-        Piercing: 10
+        Piercing: 15
+        Blunt: 7
   - type: TimedDespawn
     lifetime: 0.6
   - type: GatheringProjectile
