--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/buildings.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/buildings.yml
@@ -68,15 +68,15 @@
     count: 25
     icon: { sprite: SS220/Interface/Materials/material_icons_16.rsi, state: tokl}
 
-- type: cultYoggBuilding
-  id: CultYoggBedBuilding
-  order: 6
-  frame: CultYoggBuildingFrame
-  result: CultYoggBed
-  materials:
-  - stack: Tokl
-    count: 10
-    icon: { sprite: SS220/Interface/Materials/material_icons_16.rsi, state: tokl}
-  - stack: Cablelive
-    count: 5
-    icon: { sprite: SS220/Interface/Materials/material_icons_16.rsi, state: coillv}
+#- type: cultYoggBuilding
+#  id: CultYoggBedBuilding
+#  order: 6
+#  frame: CultYoggBuildingFrame
+#  result: CultYoggBed
+#  materials:
+#  - stack: Tokl
+#    count: 10
+#    icon: { sprite: SS220/Interface/Materials/material_icons_16.rsi, state: tokl}
+#  - stack: Cablelive
+#    count: 5
+#    icon: { sprite: SS220/Interface/Materials/material_icons_16.rsi, state: coillv}
