--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/buildings.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/buildings.yml
@@ -68,6 +68,7 @@
     count: 25
     icon: { sprite: SS220/Interface/Materials/material_icons_16.rsi, state: tokl}
 
+# TODO: раскомментить после того, как будут спрайты кровати
 #- type: cultYoggBuilding
 #  id: CultYoggBedBuilding
 #  order: 6
