added first steps

--- a/Resources/Prototypes/Entities/Structures/Shuttles/cannons.yml
+++ b/Resources/Prototypes/Entities/Structures/Shuttles/cannons.yml
@@ -47,6 +47,7 @@
     - Toggle
     - On
     - Off
+    - WeaponContolReceiver #SS220 WeaponControl_Console
   - type: AutoShootGun
   - type: GunSignalControl
   - type: StaticPrice
