--- a/Resources/Prototypes/SS220/Entities/Objects/Devices/Circuitboards/computer.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Devices/Circuitboards/computer.yml
@@ -20,3 +20,12 @@
       prototype: ComputerShuttleSalvage
     - type: StealTarget
       stealGroup: SalvageShuttleConsoleCircuitboard
+
+- type: entity
+  parent: BaseComputerCircuitboard
+  id: WeaponContolConsoleCircuitboard
+  name: weapon contol console board
+  description: A computer printed circuit board for a weapon contol console.
+  components:
+    - type: ComputerBoard
+      prototype: ComputerWeaponContol
